Fixed an issue regarding sending an email because of changes in the config file

--- a/app/views/email/templates/default.twig
+++ b/app/views/email/templates/default.twig
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Competitie Manager</title>
+    <title>Funnel CMS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; font-size: 14px">
@@ -12,6 +12,6 @@
     <p>
         - - - - - - - - - - - - - - - -
     </p>
-    <p>Competitie Manager gemaakt door <a href="http://www.rubenvermeulen.be">Ruben Vermeulen</a></p>
+    <p>Funnel CMS gemaakt door <a href="http://www.rubenvermeulen.be">Ruben Vermeulen</a></p>
 </body>
 </html>
