Fixed issue for login redirect Fixed issue with URL for email verification and recovery Added Article (create, all)

--- a/app/views/templates/partials/navigation.twig
+++ b/app/views/templates/partials/navigation.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
         <div class="navbar-header">
 
@@ -30,7 +30,7 @@
 
                             </ul>
                         </li>
-                        <li><a href="">Item 2</a></li>
+                        <li><a href="{{ urlFor('article.all') }}">Artikels</a></li>
                         <li><a href="">Item 3</a></li>
                     </ul>
 
