--- a/app/views/article/create.twig
+++ b/app/views/article/create.twig
@@ -19,8 +19,18 @@
         </div>
         <div class="form-group">
             <label for="content">Bericht</label>
-            <textarea name="content" id="content" class="form-control" rows="10">{% if request.post('content') %} value="{{ request.post('content') }}" {% endif %}</textarea>
+            <textarea name="content" id="content" class="form-control" rows="10">{% if request.post('content') %}{{ request.post('content') }}{% endif %}</textarea>
             {% include 'errors/field.twig' with {field: 'content'} %}
+        </div>
+        <div class="form-group">
+            <label for="date">Datum (publicatie)</label>
+            <input type="date" name="date" id="date" class="form-control" {% if request.post('date') %} value="{{ request.post('date') }}" {% else %} value="{{ date }}" {% endif %}>
+            {% include 'errors/field.twig' with {field: 'date'} %}
+        </div>
+        <div class="form-group">
+            <label for="time">Tijd (publicatie)</label>
+            <input type="time" name="time" id="time" class="form-control" {% if request.post('time') %} value="{{ request.post('time') }}" {% else %} value="{{ time }}" {% endif %}>
+            {% include 'errors/field.twig' with {field: 'time'} %}
         </div>
         <div class="form-group">
             <input type="submit" value="Aanmaken" class="btn btn-primary form-control"/>
