--- a/app/views/templates/partials/navigation.twig
+++ b/app/views/templates/partials/navigation.twig
@@ -21,17 +21,11 @@
 
                 {# Left navigation #}
                     <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Item 1 <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-
-                                <li><a href="">Item 1</a></li>
-                                <li><a href="">Item 2</a></li>
-
-                            </ul>
-                        </li>
                         <li><a href="{{ urlFor('article.all') }}">Artikels</a></li>
-                        <li><a href="">Item 3</a></li>
+
+                        {% if auth.isAdmin %}
+                            <li><a href="{{ urlFor('user.all') }}">Gebruikers</a></li>
+                        {% endif %}
                     </ul>
 
                 {# Right navigation #}
@@ -39,18 +33,10 @@
                     {% if auth %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="{{ auth.getAvatarUrl({size: 16}) }}" alt="Avatar" class="padding-right-10"/>
-                                {{ auth.getFullNameOrUsername }} <span class="caret"></span></a>
+                                {{ auth.getFullNameOrEmail }} <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ urlFor('account.profile') }}">Gegevens wijzigen</a></li>
                                 <li><a href="{{ urlFor('auth.password.change') }}">Wachtwoord wijzigen</a></li>
-
-                                {% if auth.isAdmin %}
-                                    <li role="seperator" class="divider"></li>
-                                    <li><a href="{{ urlFor('user.all') }}">Gebruikers</a></li>
-                                    <li><a href="{{ urlFor('user.create') }}">Gebruiker aanmaken</a></li>
-                                {% endif %}
-
                             </ul>
                         </li>
                         <li><a href="{{ urlFor('logout') }}">Uitloggen</a></li>
