--- a/app/views/templates/scripts/formDelete.twig
+++ b/app/views/templates/scripts/formDelete.twig
@@ -1,6 +1,6 @@
 <script>
     $('#form-delete').submit(function(e) {
-        if (confirm("Ben je zeker dat je dit wilt verwijderen?")) {
+        if (confirm("Ben je zeker dat je dit wilt verwijderen? Deze actie kan niet ongedaan worden gemaakt.")) {
             return true;
         }
         else {
