--- a/app/views/account/profile.twig
+++ b/app/views/account/profile.twig
@@ -16,12 +16,12 @@
             {% include 'errors/field.twig' with {'field': 'first_name'} %}
         </div>
         <div class="form-group">
-            <label for="last_name">Achternaam</label>
+            <label for="last_name">Familienaam</label>
             <input type="text" name="last_name" id="last_name" value="{{ request.post('last_name') ? request.post('last_name') : auth.last_name }}" class="form-control"/>
             {% include 'errors/field.twig' with {'field': 'last_name'} %}
         </div>
         <div class="form-group">
-            <input type="submit" value="Wijzigen" class="btn btn-primary form-control"/>
+            <input type="submit" value="Wijzigen opslaan" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
