--- a/app/views/article/all.twig
+++ b/app/views/article/all.twig
@@ -13,6 +13,7 @@
                 <tr>
                     <th>Id</th>
                     <th>Onderwerp</th>
+                    <th>Auteur</th>
                     <th>Aangemaakt op</th>
                     <th>Laatst gewijzigd op</th>
                     <th>Gepubliceerd op</th>
@@ -24,6 +25,7 @@
                     <tr>
                         <td>{{ article.id }}</td>
                         <td>{{ article.subject }}</td>
+                        <td>{{ article.author.getFullNameOrEmail }}</td>
                         <td>{{ article.getCreatedAt }}</td>
                         <td>{{ article.getUpdatedAt }}</td>
                         <td>{{ article.getPublishedAt }}</td>
