--- a/app/views/article/create.twig
+++ b/app/views/article/create.twig
@@ -6,7 +6,7 @@
 {% block content %}
     {# Back button#}
     <p>
-        <a href="{{ urlFor('home') }}" class="btn btn-primary">
+        <a href="{{ urlFor('article.all') }}" class="btn btn-primary">
             <span class="glyphicon glyphicon-arrow-left"></span>
         </a>
     </p>
@@ -18,18 +18,23 @@
             {% include 'errors/field.twig' with {field: 'subject'} %}
         </div>
         <div class="form-group">
+            <label for="summary">Korte beschrijving (1 à 2 zinnen)</label>
+            <textarea name="summary" id="summary" rows="2" class="form-control">{% if request.post('summary') %}{{ request.post('summary') }}{% endif %}</textarea>
+            {% include 'errors/field.twig' with {field: 'summary'} %}
+        </div>
+        <div class="form-group">
             <label for="content">Bericht</label>
             <textarea name="content" id="content" class="form-control editor" rows="10">{% if request.post('content') %}{{ request.post('content') }}{% endif %}</textarea>
             {% include 'errors/field.twig' with {field: 'content'} %}
         </div>
         <div class="form-group">
             <label for="date">Datum (publicatie)</label>
-            <input type="date" name="date" id="date" class="form-control" {% if request.post('date') %} value="{{ request.post('date') }}" {% else %} value="{{ date }}" {% endif %}>
+            <input type="date" name="date" id="date" class="form-control" {% if request.post('date') %} value="{{ request.post('date') }}" {% else %} value="{{ date }}" {% endif %}/>
             {% include 'errors/field.twig' with {field: 'date'} %}
         </div>
         <div class="form-group">
             <label for="time">Tijd (publicatie)</label>
-            <input type="time" name="time" id="time" class="form-control" {% if request.post('time') %} value="{{ request.post('time') }}" {% else %} value="{{ time }}" {% endif %}>
+            <input type="time" name="time" id="time" class="form-control" {% if request.post('time') %} value="{{ request.post('time') }}" {% else %} value="{{ time }}" {% endif %}/>
             {% include 'errors/field.twig' with {field: 'time'} %}
         </div>
         <div class="form-group">
