--- a/app/views/templates/default.twig
+++ b/app/views/templates/default.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Funnel CMS | {% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %} - Funnel CMS</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="{{ assetUrl }}/css/stylesheet.css"/>
     <link href='//fonts.googleapis.com/css?family=Roboto:500,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>
