--- a/app/views/user/all.twig
+++ b/app/views/user/all.twig
@@ -19,7 +19,7 @@
             <tbody>
                 {% for user in users %}
                     <tr>
-                        <td>{{ user.username }}</td>
+                        <td>{{ user.email }}</td>
                         <td>{{ user.isAdmin ? 'Admin' : 'Normaal' }}</td>
                         <td><a href="{{ urlFor('user.edit', {userId: user.id}) }}">Wijzigen</a></td>
                     </tr>
