Added newsletter create, edit and delete.

--- a/app/views/templates/partials/navigation.twig
+++ b/app/views/templates/partials/navigation.twig
@@ -22,6 +22,7 @@
                 {# Left navigation #}
                     <ul class="nav navbar-nav">
                         <li><a href="{{ urlFor('article.all') }}">Artikels</a></li>
+                        <li><a href="{{ urlFor('newsletter.all') }}">Nieuwsbrieven</a></li>
 
                         {% if auth.isAdmin %}
                             <li><a href="{{ urlFor('user.all') }}">Gebruikers</a></li>
