--- a/app/views/article/all.twig
+++ b/app/views/article/all.twig
@@ -8,18 +8,19 @@
     {% if articles is empty %}
         <p>Er zijn nog geen artikels.</p>
     {% else %}
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>Onderwerp</th>
-                    <th>Auteur</th>
-                    <th>Aangemaakt op</th>
-                    <th>Laatst gewijzigd op</th>
-                    <th>Gepubliceerd op</th>
-                    <th>Actie</th>
-                </tr>
-            </thead>
-            <tbody>
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Onderwerp</th>
+                        <th>Auteur</th>
+                        <th>Aangemaakt op</th>
+                        <th>Laatst gewijzigd op</th>
+                        <th>Gepubliceerd op</th>
+                        <th>Actie</th>
+                    </tr>
+                </thead>
+                <tbody>
                 {% for article in articles %}
                     <tr>
                         <td>{{ article.subject }}</td>
@@ -30,9 +31,9 @@
                         <td><a href="{{ urlFor('article.edit', {id: article.id}) }}" title="Wijzigen">Wijzigen</a></td>
                     </tr>
                 {% endfor %}
-            </tbody>
-        </table>
-
+                </tbody>
+            </table>
+        </div>
     {% endif %}
 {% endblock %}
 
