--- a/app/views/auth/login.twig
+++ b/app/views/auth/login.twig
@@ -7,7 +7,7 @@
     <form action="{{ urlFor('login.post') }}" method="post" autocomplete="off">
         <div class="form-group">
             <label for="identifier">E-mailadres</label>
-            <input type="text" name="identifier" id="identifier" class="form-control"/>
+            <input type="email" name="identifier" id="identifier" class="form-control"/>
             {% include 'errors/field.twig' with {'field': 'identifier'} %}
         </div>
         <div class="form-group">
