If a user is not activated the delete button will remove the user from the database. If activated a soft delete will take place.

--- a/app/views/user/all.twig
+++ b/app/views/user/all.twig
@@ -20,7 +20,7 @@
                 <tbody>
                     {% for user in users %}
                         <tr>
-                            <td>{{ user.email }}</td>
+                            <td>{{ user.email }} {{ user.isActivated ? "" : "(Niet geactiveerd)" }}</td>
                             <td>{{ user.isAdmin ? 'Admin' : 'Normaal' }}</td>
                             <td><a href="{{ urlFor('user.edit', {userId: user.id}) }}" title="Wijzigen">Wijzigen</a></td>
                         </tr>
