Added th's also to each table bottom.

--- a/app/views/newsletter/all.twig
+++ b/app/views/newsletter/all.twig
@@ -41,6 +41,14 @@
                         </tr>
                     {% endfor %}
                 </tbody>
+
+                <tr>
+                    <th>Onderwerp</th>
+                    <th>Auteur</th>
+                    <th>Ontvangers</th>
+                    <th>Verzonden op</th>
+                    <th>Actie</th>
+                </tr>
             </table>
         </div>
 
