--- a/app/views/user/all.twig
+++ b/app/views/user/all.twig
@@ -26,6 +26,12 @@
                         </tr>
                     {% endfor %}
                 </tbody>
+
+                <tr>
+                    <th>Gebruikersnaam</th>
+                    <th>Rechten</th>
+                    <th>Actie</th>
+                </tr>
             </table>
         </div>
     {% endif %}
