--- a/app/views/article/all.twig
+++ b/app/views/article/all.twig
@@ -10,7 +10,7 @@
     {% else %}
         <div class="table-responsive">
             <table class="table table-bordered">
-                <thead>
+
                     <tr>
                         <th>Onderwerp</th>
                         <th>Auteur</th>
@@ -19,7 +19,7 @@
                         <th>Gepubliceerd op</th>
                         <th>Actie</th>
                     </tr>
-                </thead>
+
                 <tbody>
                 {% for article in articles %}
                     <tr>
@@ -32,6 +32,15 @@
                     </tr>
                 {% endfor %}
                 </tbody>
+
+                <tr>
+                    <th>Onderwerp</th>
+                    <th>Auteur</th>
+                    <th>Aangemaakt op</th>
+                    <th>Laatst gewijzigd op</th>
+                    <th>Gepubliceerd op</th>
+                    <th>Actie</th>
+                </tr>
             </table>
         </div>
 
