--- a/app/views/newsletter/mailinglist/create.twig
+++ b/app/views/newsletter/mailinglist/create.twig
@@ -1,7 +1,7 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %}E-mailadres toevoegen{% endblock %}
-{% block pageTitle %}E-mailadres toevoegen{% endblock %}
+{% block title %}Ontvanger toevoegen{% endblock %}
+{% block pageTitle %}Ontvanger toevoegen{% endblock %}
 
 {% block content %}
     {# Back button#}
