--- a/app/views/newsletter/mailinglist/all.twig
+++ b/app/views/newsletter/mailinglist/all.twig
@@ -18,6 +18,7 @@
                 <thead>
                     <tr>
                         <th>E-mailadres</th>
+                        <th>Naam</th>
                         <th>Status</th>
                         <th>Actie</th>
                     </tr>
@@ -26,6 +27,7 @@
                     {% for recipient in recipients %}
                         <tr>
                             <td>{{ recipient.address }}</td>
+                            <td>{{ recipient.name }}</td>
 
                             {% if recipient.subscribed == 'yes' %}
                                 <td class="success">Ingeschreven</td>
@@ -42,6 +44,7 @@
 
                 <tr>
                     <th>E-mailadres</th>
+                    <th>Naam</th>
                     <th>Status</th>
                     <th>Actie</th>
                 </tr>
