--- a/app/views/newsletter/mailinglist/edit.twig
+++ b/app/views/newsletter/mailinglist/edit.twig
@@ -17,7 +17,7 @@
             <p class="form-control-static">{{ recipient.getAddress }}</p>
         </div>
         <div class="form-group">
-            <label for="name">Naam</label>
+            <label for="name">Naam (optioneel)</label>
             <input type="text" name="name" id="name" value="{{ request.post('name') ? request.post('name') : recipient.getName }}" class="form-control"/>
             {% include 'errors/field.twig' with {field: 'name'} %}
         </div>
