--- a/app/views/account/profile.twig
+++ b/app/views/account/profile.twig
@@ -21,7 +21,7 @@
             {% include 'errors/field.twig' with {'field': 'last_name'} %}
         </div>
         <div class="form-group">
-            <input type="submit" value="Wijzigen opslaan" class="btn btn-primary form-control"/>
+            <input type="submit" value="Wijzigingen opslaan" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
