--- a/app/views/article/all.twig
+++ b/app/views/article/all.twig
@@ -4,10 +4,36 @@
 {% block pageTitle %}Artikels{% endblock %}
 
 {% block content %}
-    <p><a href="{{ urlFor('article.create') }}" class="btn btn-primary">Nieuw</a></p>
+    <div class="row toolbar">
+        <div class="col-md-4">
+            <a href="{{ urlFor('article.create') }}" class="btn btn-primary">Nieuw</a>
+        </div>
+        <div class="col-md-8">
+            <form action="{{ urlFor('article.search') }}" method="get" autocomplete="off" class="form-inline pull-right">
+                <div class="input-group">
+                    <input type="keyword" name="keyword" id="keyword" placeholder="Zoekterm" class="form-control"/>
+                    <span class="input-group-btn">
+                        <button type="submit" id="submit" class="btn btn-primary"/>
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                </div>
+            </form>
+        </div>
+    </div>
+
     {% if articles is empty %}
-        <p>Er zijn nog geen artikels.</p>
+        {% if not searchCount %}
+            <p>Er zijn geen resultaten gevonden voor je zoekopdracht "<strong>{{ keyword }}</strong>".</p>
+        {% else %}
+            <p>Er zijn nog geen artikels.</p>
+        {% endif %}
+
     {% else %}
+        {% if searchCount %}
+            <p>Er zijn <strong>{{ searchCount }}</strong> resultaten gevonden voor je zoekopdracht "<strong>{{ keyword }}</strong>".</p>
+        {% endif %}
+
         <div class="table-responsive">
             <table class="table table-bordered">
                 <thead>
