--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -55,12 +55,21 @@
 
 .btn-primary {
     background: #009d7e;
-    border: 1px solid #00876C;
+    border-color: #00876C;
     transition: background .2s linear;
 }
 
-.btn-primary:active,
-.btn-primary:hover {
+.btn-primary:focus,
+.btn-primary:hover,
+.btn-primary:active
+.btn-primary:active:hover,
+.btn-primary:active:focus {
     background: #00876C;
-    border: 1px solid #00876C;
+    border-color: #00876C;
+}
+
+/* Toolbar */
+
+.toolbar {
+    margin-bottom: 10px;
 }
