--- a/app/views/newsletter/all.twig
+++ b/app/views/newsletter/all.twig
@@ -10,16 +10,7 @@
             <a href="{{ urlFor('newsletter.mailingList.all') }}" class="btn btn-primary">Mailinglijst</a>
         </div>
         <div class="col-md-8">
-            <form action="{{ urlFor('newsletter.search') }}" method="get" autocomplete="off" class="form-inline pull-right">
-                <div class="input-group">
-                    <input type="keyword" name="keyword" id="keyword" placeholder="Zoekterm" class="form-control"/>
-                    <span class="input-group-btn">
-                        <button type="submit" id="submit" class="btn btn-primary"/>
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-                </div>
-            </form>
+            {% include 'templates/partials/searchForm.twig' with {'url': urlFor('newsletter.search')} only %}
         </div>
     </div>
 
