Added files edit, create and delete + fixed bug where no items in pagination would throw notFound.

--- a/app/views/article/all.twig
+++ b/app/views/article/all.twig
@@ -14,7 +14,7 @@
     </div>
 
     {% if articles is empty %}
-        {% if not searchCount %}
+        {% if searchCount and searchCount == 0 %}
             <p>Er zijn geen resultaten gevonden voor je zoekopdracht "<strong>{{ keyword }}</strong>".</p>
         {% else %}
             <p>Er zijn nog geen artikels.</p>
