--- a/app/views/templates/partials/navigation.twig
+++ b/app/views/templates/partials/navigation.twig
@@ -23,6 +23,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="{{ urlFor('article.all') }}">Artikels</a></li>
                         <li><a href="{{ urlFor('newsletter.all') }}">Nieuwsbrieven</a></li>
+                        <li><a href="{{ urlFor('file.all') }}">Bestanden</a></li>
 
                         {% if auth.isAdmin %}
                             <li><a href="{{ urlFor('user.all') }}">Gebruikers</a></li>
