--- a/app/views/newsletter/all.twig
+++ b/app/views/newsletter/all.twig
@@ -15,7 +15,7 @@
     </div>
 
     {% if newsletters is empty %}
-        {% if not searchCount %}
+        {% if searchCount and searchCount == 0 %}
             <p>Er zijn geen resultaten gevonden voor je zoekopdracht "<strong>{{ keyword }}</strong>".</p>
         {% else %}
             <p>Er zijn nog geen nieuwsbrieven.</p>
