--- a/app/views/article/all.twig
+++ b/app/views/article/all.twig
@@ -5,10 +5,10 @@
 
 {% block content %}
     <div class="row toolbar">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6">
             <a href="{{ urlFor('article.create') }}" class="btn btn-primary">Nieuw</a>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-6">
             {% include 'templates/partials/searchForm.twig' with {'url': urlFor('article.search')} only %}
         </div>
     </div>
