--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -73,3 +73,95 @@
 .toolbar {
     margin-bottom: 10px;
 }
+
+.toolbar > div:first-of-type {
+    margin-bottom: 10px;
+}
+
+/* Files */
+
+#files .file {
+    margin-bottom: 15px;
+}
+
+#files .file .frame {
+    border: 1px solid #e6e6e6;
+}
+
+#files .file .frame .image {
+    position: relative;
+    background: #f8f8f8;
+    height: 200px;
+}
+
+#files .file .frame .image img {
+    max-width: 100%;
+    max-height: 200px;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+#files .file .frame .details {
+    padding: 10px;
+    background: #f1f1f1;
+    border-top: 1px solid #e6e6e6;
+}
+
+#files .file .frame .details .name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+#files .file .frame .details .url {
+    margin-bottom: 10px
+}
+
+/* Start collapse sooner */
+@media (min-width: 768px) and (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+
+    .navbar-collapse {
+        -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
+        box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
+    }
+
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px 0;
+    }
+
+    .navbar-nav>li {
+        float: none;
+    }
+
+    .navbar-nav>li>a {
+        padding: 10px 0;
+    }
+
+    .collapse.in{
+        display:block !important;
+    }
+}
