--- a/app/views/templates/default.twig
+++ b/app/views/templates/default.twig
@@ -8,6 +8,8 @@
     <link href='//fonts.googleapis.com/css?family=Roboto:500,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="{{ assetUrl }}/favicon.ico">
+
+    {% block stylesheets %}{% endblock %}
 </head>
 <body>
     {% include 'templates/partials/navigation.twig' %}
